<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/mainBackground">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <ImageView
                android:id="@+id/guide_one_img"
                android:layout_width="match_parent"
                android:layout_height="@dimen/_120sdp"
                android:padding="8dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent"
                app:srcCompat="@drawable/guide1" />

            <LinearLayout
                android:id="@+id/guide_one_des"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintTop_toBottomOf="@+id/guide_one_img">

                <TextView
                    android:id="@+id/slide_heading1"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/headLine1"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/slide_desc1"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/description1"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/guide_two_img"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:layout_marginTop="16dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guide_one_des"
                app:srcCompat="@drawable/guide2" />

            <LinearLayout
                android:id="@+id/linearLayout2"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/guide_two_img">

                <TextView
                    android:id="@+id/slide_heading2"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/headLine2"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/slide_desc2"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/description2"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

            <ImageView
                android:id="@+id/imageView4"
                android:layout_width="match_parent"
                android:layout_height="200dp"
                android:paddingLeft="40dp"
                android:paddingRight="40dp"
                android:scaleType="fitCenter"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/linearLayout2"
                app:srcCompat="@drawable/guide3" />

            <LinearLayout
                android:id="@+id/linearLayout3"
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:orientation="vertical"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@id/imageView4">

                <TextView
                    android:id="@+id/slide_heading3"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_gravity="center"
                    android:background="#00FFFFFF"
                    android:gravity="center"
                    android:text="@string/headLine3"
                    android:textColor="#ffffff"
                    android:textSize="24sp" />

                <TextView
                    android:id="@+id/slide_desc3"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center"
                    android:gravity="center"
                    android:padding="20dp"
                    android:text="@string/description3"
                    android:textColor="#ffffff"
                    android:textSize="16sp" />

            </LinearLayout>

        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>