<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    app:layout_constraintEnd_toEndOf="parent"
    tools:context="com.hurhco.telegramPro.FirstActivity">

    <androidx.constraintlayout.widget.ConstraintLayout
        android:id="@+id/constraint"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="#1976D2">

        <TextView

            android:id="@+id/btn_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/eagleDesc"
            android:textColor="#A6FFFFFF"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/pro_btn"
            app:layout_constraintVertical_bias="0.0" />

        <ImageButton
            android:id="@+id/share_btn"
            android:layout_width="42dp"
            android:layout_height="42dp"
            android:background="@drawable/share"
            android:scrollbarAlwaysDrawHorizontalTrack="false"
            android:scrollbarAlwaysDrawVerticalTrack="false"
            app:srcCompat="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="1.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.02" />

        <ImageButton
            android:id="@+id/policy_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/policy"
            app:srcCompat="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/share_btn"
            app:layout_constraintVertical_bias="0.01" />

        <ImageButton
            android:id="@+id/rate_btn"
            android:layout_width="35dp"
            android:layout_height="35dp"
            android:background="@drawable/rate"
            app:srcCompat="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.985"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@id/policy_btn"
            app:layout_constraintVertical_bias="0.01" />

        <ImageButton
            android:id="@+id/pro_btn"
            android:layout_width="215dp"
            android:layout_height="220dp"
            android:background="@drawable/proicon"
            app:srcCompat="?attr/selectableItemBackground"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="0.34" />

        <ImageButton
            android:id="@+id/guide_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/guide"
            android:foregroundGravity="center"
            app:layout_constraintBottom_toTopOf="@+id/guidetxt"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="@+id/guideline"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/guidetxt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/howToUse"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/ad_container"
            app:layout_constraintEnd_toEndOf="@+id/guide_btn"
            app:layout_constraintStart_toStartOf="@+id/guide_btn" />

        <ImageButton
            android:id="@+id/lan_btn"
            android:layout_width="70dp"
            android:layout_height="70dp"
            android:background="@drawable/lang"
            app:layout_constraintBottom_toTopOf="@+id/lang_txt"
            app:layout_constraintEnd_toStartOf="@+id/guideline"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0" />

        <TextView
            android:id="@+id/lang_txt"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="32dp"
            android:text="@string/Language"
            android:textColor="#FFFFFF"
            app:layout_constraintBottom_toTopOf="@+id/ad_container"
            app:layout_constraintEnd_toEndOf="@+id/lan_btn"
            app:layout_constraintStart_toStartOf="@+id/lan_btn" />

        <FrameLayout
            android:id="@+id/ad_container"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintHorizontal_bias="0.0"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent"
            app:layout_constraintVertical_bias="1.0">

        </FrameLayout>

        <androidx.constraintlayout.widget.Guideline
            android:id="@+id/guideline"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            app:layout_constraintGuide_percent="0.50121653" />

    </androidx.constraintlayout.widget.ConstraintLayout>

</androidx.constraintlayout.widget.ConstraintLayout>
